--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,10 @@
   box-sizing: border-box;
   font-family: 'Playfair Display', serif;
 }
+
+/* Color Palette
+Dark Purple: #331E36
+Dark Slate Blue: #41337A
+Air Superiority Blue: #6EA4BF
+Powder Blue: #C2EFEB
+Honeydew: #ECFEE8 */
