--- a/src/components/Homepage/homepage.css
+++ b/src/components/Homepage/homepage.css
@@ -1,11 +1,39 @@
+.top-img {
+    display: none;
+}
 
+.mid-link-sec {
+    display: flex;
+    gap: 10px;
+}
 
+.mid-btn {
+    border: none;
+    background-color: #6EA4BF;
+    color: #ECFEE8;
+    padding: 10px 26px;
+    font-size: 16px;
+    cursor: pointer;
+}
 
+.mid-link {
+    margin: auto;
+    text-decoration: none;
+    color: #6EA4BF;
+}
 
+.golden-plus {
+    color: gold;
+}
 
+.bottom-img {
+    display: none;
+}
 
-
-
+.bottom-link {
+    text-decoration: none;
+    color: #6EA4BF;
+}
 
 /* Tablet/Desktop Sizing */
 @media screen and (min-width: 1024px) {
@@ -26,6 +54,14 @@
         gap: 10px;
     }
 
+    .space-list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        gap: 10px;
+    }
+
     .top-right {
         grid-column: 2/3;
         grid-row: 1/2;
@@ -35,6 +71,7 @@
     }
 
     .top-img {
+        display: block;
         height: 650px;
         width: 412.5px;
         border: 5px solid #ECFEE8;
@@ -72,6 +109,7 @@
     }
 
     .bottom-img {
+        display: block;
         height: 650px;
         width: 412.5px;
         border: 5px solid #ECFEE8;
