--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,5 +1,5 @@
 section {
-    background-color: #6EA4BF;
+    background-color: #EFEFEF;
     padding: 20px;
     display: flex;
     justify-content: space-between;
@@ -9,7 +9,7 @@ section {
 
 .logo a {
     text-decoration: none;
-    color: #ECFEE8;
+    color: black;
 }
 
 nav.navigation {
@@ -17,7 +17,7 @@ nav.navigation {
 }
 
 nav.navigation a:hover, .logo a:hover {
-    color: #41337A;
+    color: #6EA4BF;
     transition: 0.20s;
 }
 
@@ -31,12 +31,12 @@ nav.navigation.active {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: #6EA4BF;
+    background-color: #EFEFEF;
 }
 
 nav.navigation.active a {
     padding: 20px;
-    color: #ECFEE8;
+    color: black;
     font-weight: 500;
     text-decoration: none;
 }
@@ -64,7 +64,7 @@ img.show {
     nav.navigation a {
         font-size: 1.05rem;
         padding: 10px;
-        color: #ECFEE8;
+        color: #303438;
         text-decoration: none;
     }
     div.toggleBox {
