--- a/src/components/Homepage/homepage.css
+++ b/src/components/Homepage/homepage.css
@@ -220,6 +220,11 @@
         font-size: 30px;
     }
 
+    .mid-coffee-list {
+        display: flex;
+        gap: 15px;
+    }
+
     .mid-link {
         padding-top: 15px;
         font-size: 16px;
@@ -399,6 +404,11 @@
         text-decoration: none;
         list-style: none;
         padding: 2.5px 0;
+    }
+
+    li a:hover {
+        transition: 0.20s;
+        color: #BF723F;
     }
 
     .bottom-footer-section {
