--- a/src/components/Homepage/homepage.css
+++ b/src/components/Homepage/homepage.css
@@ -1,19 +1,19 @@
-/* .container {
-    background: linear-gradient(
-        to bottom,
-        #303438 0%, 
-        #303438 50%, 
-        #EFEFEF 50%, 
-        #EFEFEF 100%
-    ) ;
-} */
-
 .top-section {
     background-color: #EFEFEF;
 }
 
 .top-img {
     display: none;
+}
+
+.top-left {
+    height: 45vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 10px;
+    gap: 10px;
 }
 
 .title {
@@ -55,12 +55,24 @@
     color: #BF723F;
 }
 
-.destination-title {
-    color: #787B7D;
+.mid-section {
+    background-color: #303438;
+    height: 45vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr)
 }
 
-.destination-list, .mid-statement, .mid-desc-one, .mid-desc-two, .mid-coffee-section {
-    color: #EFEFEF;
+.mid-left {
+    grid-column: 1/2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin: 0 10px;
+}
+
+.destination-title {
+    color: #787B7D;
 }
 
 .golden-text {
@@ -68,6 +80,19 @@
 }
 
 .mid-img {
+    display: none;
+}
+
+.mid-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin: 0 10px;
+    flex-wrap: wrap;
+}
+
+.mid-coffee-list {
     display: none;
 }
 
@@ -85,20 +110,124 @@
     color: #BF723F;
 }
 
-.bottom-review-text {
-    color: #787B7D;
+.bottom-section {
+    height: 100vh;
+}
+
+.logo-section {
+    height: 33.33vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .bottom-open-statement {
     color: #202131;
 }
 
+.logo-images {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+ .bottom-open-statement {
+    font-weight: 500;
+}
+
+.li-logo {
+    height: 70px;
+    width: 120px;
+}
+
+.wayne-logo {
+    height: 70px;
+    width: 120px;
+}
+
+.cp-logo {
+    height: 70px;
+    width: 120px;
+}
+
+.review-section {
+    height: 66.67vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.left-review-card {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.review-choices {
+    display: flex;
+    gap: 10px;
+}
+
+.right-review-card {
+    color: #EFEFEF;
+    background-color: #303438;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.bottom-review-text {
+    color: #787B7D;
+}
+
+.bottom-closing-statement-one {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.bottom-closing-statement-two {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer {
+    background-color: #303438;
+    color: #EFEFEF;
+}
+
+.left-footer-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .footer-info-desc {
+    display: none;
     color: #787B7D;
 }
 
 .footer-info-address {
     color: #787B7D;
+}
+
+.right-footer-section {
+    display: none;
+}
+
+.bottom-footer-section {
+    text-align: center;
 }
 
 /* Tablet/Desktop Sizing */
@@ -110,6 +239,7 @@
     }
 
     .top-left {
+        height: 90vh;
         grid-column: 1/2;
         grid-row: 1/2;
         display: flex;
@@ -178,6 +308,10 @@
         gap: 30px;
     }
 
+    .destination-list, .mid-statement, .mid-desc-one, .mid-desc-two, .mid-coffee-section {
+        color: #EFEFEF;
+    }
+
     .destination-title {
         font-size: 18px;
     }
@@ -207,6 +341,7 @@
         justify-content: center;
         margin: 0 auto;
         gap: 10px;
+        text-align: justify;
     }
 
     .mid-statement {
@@ -230,13 +365,16 @@
         font-size: 16px;
     }
 
+    .bottom-section {
+        height: 100vh;
+    }
+
     .bottom-open-statement {
         font-size: 18px;
-        font-weight: 500;
     }
 
     .logo-section {
-        height: 50vh;
+        height: 45vh;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
@@ -263,7 +401,7 @@
     }
 
     .review-section {
-        height: 80vh;
+        height: 55vh;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
@@ -301,8 +439,6 @@
         margin: 0 auto;
         margin: 25px;
         padding: 25px 75px;
-        color: #EFEFEF;
-        background-color: #303438;
         border-radius: 2.5%;
         gap: 20px;
     }
@@ -332,12 +468,10 @@
     }
 
     .footer {
-        height: 35vh;
+        height: 32vh;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 2fr 0.5fr;
-        background-color: #303438;
-        color: #EFEFEF;
     }
 
     .left-footer-section {
@@ -351,6 +485,11 @@
         grid-column: 1/2;
         grid-row: 1/2;
         margin: auto;
+    }
+
+    .footer-info-desc {
+        display: block;
+        color: #787B7D;
     }
 
     .footer-info {
