--- a/src/components/Homepage/homepage.css
+++ b/src/components/Homepage/homepage.css
@@ -13,11 +13,15 @@
     align-items: center;
     justify-content: center;
     margin: 0 10px;
-    gap: 10px;
+    gap: 15px;
 }
 
 .title {
     font-style: italic;
+}
+
+.top-statement-one, .top-statement-two {
+    font-size: 42px;
 }
 
 .top-link-sec {
@@ -69,10 +73,15 @@
     justify-content: center;
     text-align: center;
     margin: 0 10px;
+    gap: 15px;
 }
 
 .destination-title {
     color: #787B7D;
+}
+
+.destination-list {
+    color: #EFEFEF;
 }
 
 .golden-text {
@@ -87,9 +96,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     text-align: center;
     margin: 0 10px;
     flex-wrap: wrap;
+}
+
+.mid-statement {
+    color: #EFEFEF;
 }
 
 .mid-coffee-list {
@@ -167,6 +181,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 25px;
+    margin: 0 10px;
 }
 
 .review-choices {
@@ -181,6 +200,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 25px;
+    margin: 0 10px;
+    border-radius: 5%;
 }
 
 .bottom-review-text {
