--- a/src/components/Homepage/homepage.css
+++ b/src/components/Homepage/homepage.css
@@ -468,7 +468,7 @@
         margin: 0 auto;
         margin: 25px;
         padding: 25px 75px;
-        border-radius: 2.5%;
+        border-radius: 5%/25%;
         gap: 20px;
     }
 
