--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -21,11 +21,11 @@ nav.navigation.active {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: #EFEFEF;
 }
 
@@ -54,7 +54,7 @@ img.close {
 
 img.show {
     display: block;
-    position: absolute;
+    position: fixed;
     top: 25.25px;
     right: 21px;
 }
