--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -21,7 +21,7 @@ nav.navigation.active {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    position: fixed;
+    position: absolute;
     left: 0;
     top: 0;
     width: 100vw;
@@ -54,7 +54,7 @@ img.close {
 
 img.show {
     display: block;
-    position: fixed;
+    position: absolute;
     top: 25.25px;
     right: 21px;
 }
